add step03 visualization user events.

--- a/02-data-introspection.ipynb
+++ b/02-data-introspection.ipynb
@@ -7,7 +7,6 @@
     "tags": []
    },
    "source": [
-    "CLEAN_DATA_URL = EVENT_DATA_URL.replace(\"/sparkify/\", \"/sparkify/output/02-cleaned-\")\n",
     "# \\[02\\] Data Introspection\n",
     "\n",
     "## Setup Spark Session\n",
@@ -17,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 62,
    "id": "df5acf66-8ff9-4d6f-9d94-f36e3a90c38d",
    "metadata": {
     "tags": []
@@ -98,13 +97,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 63,
    "id": "45494729-2a75-4575-a174-1eab1d757a46",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
+    "# for restarting wihtout loading the data\n",
     "df = df_persist"
    ]
   },
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 64,
    "id": "243fb596-40aa-451c-bdca-e13c252b4ffb",
    "metadata": {
     "tags": []
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 65,
    "id": "a0927955-db0f-43ae-848d-e90f832a7211",
    "metadata": {
     "tags": []
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 66,
    "id": "534f4cdc-dab2-4578-a3b0-f0af49d4ae68",
    "metadata": {
     "tags": []
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 67,
    "id": "0b66a502-d4d6-4a14-9eb0-c8ce1c3bbf56",
    "metadata": {
     "tags": []
@@ -224,7 +224,7 @@
       "+-------+------------------+----------+---------+------+------------------+--------+------------------+------+-----------------+------+-------+--------------------+-----------------+--------------------+------------------+--------------------+--------------------+------------------+\n",
       "|  count|            228108|    286500|   278154|278154|            286500|  278154|            228108|286500|           278154|286500| 286500|              278154|           286500|              228108|            286500|              286500|              278154|            286500|\n",
       "|   mean| 551.0852017937219|      null|     null|  null|114.41421291448516|    null|249.11718197783375|  null|             null|  null|   null|1.535358834085557E12|1041.526554973822|            Infinity|210.05459685863875|1.540956889810471...|                null| 59682.02278593872|\n",
-      "| stddev|1217.7693079161381|      null|     null|  null|129.76726201141105|    null| 99.23517921058325|  null|             null|  null|   null| 3.291321616327434E9|726.7762634630799|                 NaN| 31.50507848842204| 1.507543960819524E9|                null|109091.94999910535|\n",
+      "| stddev|1217.7693079161374|      null|     null|  null|129.76726201141108|    null| 99.23517921058327|  null|             null|  null|   null|3.2913216163274436E9|726.7762634630798|                 NaN| 31.50507848842204|1.5075439608195946E9|                null|109091.94999910535|\n",
       "|    min|               !!!| Cancelled| Adelaida|     F|                 0|   Adams|           0.78322|  free|       Albany, OR|   GET|  About|       1521380675000|                1|\u001c",
       "ÃÂg ÃÂtti Gr...|               200|       1538352117000|\"Mozilla/5.0 (Mac...|                  |\n",
       "|    max| ÃÂlafur Arnalds|Logged Out|   Zyonna|     M|              1321|  Wright|        3024.66567|  paid|Winston-Salem, NC|   PUT|Upgrade|       1543247354000|             2474|ÃÂau hafa slopp...|               404|       1543799476000|Mozilla/5.0 (comp...|                99|\n",
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 68,
    "id": "58bfdcf6-511d-47b2-adb3-8e0d7bea0c60",
    "metadata": {
     "tags": []
@@ -263,7 +263,7 @@
       "+-------+------------------+------------------+--------------------+-----------------+------------------+--------------------+------------------+\n",
       "|  count|            286500|            228108|              278154|           286500|            286500|              286500|            286500|\n",
       "|   mean|114.41421291448516|249.11718197783375|1.535358834085557E12|1041.526554973822|210.05459685863875|1.540956889810471...| 59682.02278593872|\n",
-      "| stddev|129.76726201141105| 99.23517921058325| 3.291321616327434E9|726.7762634630799| 31.50507848842204| 1.507543960819524E9|109091.94999910535|\n",
+      "| stddev|129.76726201141108| 99.23517921058327| 3.291321616327425E9|726.7762634630799| 31.50507848842204|1.5075439608195946E9|109091.94999910535|\n",
       "|    min|                 0|           0.78322|       1521380675000|                1|               200|       1538352117000|                  |\n",
       "|    max|              1321|        3024.66567|       1543247354000|             2474|               404|       1543799476000|                99|\n",
       "+-------+------------------+------------------+--------------------+-----------------+------------------+--------------------+------------------+\n",
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 69,
    "id": "acf9af38-1e40-4026-b73a-0f3c3ec7d61b",
    "metadata": {
     "tags": []
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 70,
    "id": "8cb5a622-8c8a-4dfa-a24e-17356d0acfb9",
    "metadata": {
     "tags": []
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 71,
    "id": "bcd61c58-48f1-49de-a414-47da30541e90",
    "metadata": {
     "tags": []
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 72,
    "id": "a59b96ec-173f-4785-9ec1-404686472e7f",
    "metadata": {
     "tags": []
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 73,
    "id": "92e85ab7-0257-4e2a-8d2b-af8c47468fd1",
    "metadata": {
     "tags": []
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 74,
    "id": "1ab3ff86-7a05-4e59-afd1-454781aaca27",
    "metadata": {
     "tags": []
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 75,
    "id": "beac871b-f85d-456f-932d-f35931357a92",
    "metadata": {
     "tags": []
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 76,
    "id": "036907a2-6832-4fa2-9d0d-64dfa41293c6",
    "metadata": {
     "tags": []
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 77,
    "id": "b2f1ae7d-cc93-4eda-bb99-046effe74fcf",
    "metadata": {
     "tags": []
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 78,
    "id": "9526d096-7bb6-4398-9de7-bd25e2e4afda",
    "metadata": {
     "tags": []
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 79,
    "id": "350c7b9c-45ed-4753-8bd6-d2849c79ec1c",
    "metadata": {
     "tags": []
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 80,
    "id": "4995c6cf-8cab-46e0-8162-1f8d0a742e4a",
    "metadata": {
     "tags": []
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 81,
    "id": "f7d0a8d2-81a6-4663-9259-085cde20c05a",
    "metadata": {
     "tags": []
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 82,
    "id": "9418af33-2368-4133-b522-54144cc2dce7",
    "metadata": {
     "tags": []
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 83,
    "id": "5a844e0a-3151-4a87-a572-a05346a3ea9d",
    "metadata": {
     "tags": []
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 84,
    "id": "f010ada2-f893-4f58-857c-792edfb8fc8e",
    "metadata": {
     "tags": []
@@ -824,76 +824,14 @@
     "\n",
     "The automatically generated column names are renamed to have the prefix \"pg_\" with only lowercase letters and underscore instead of space.\n",
     "\n",
-    "Because of the big number of categories the first column is not dropped."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "743cb50b-1a2e-431d-a66e-5daf207501c7",
-   "metadata": {},
-   "source": [
-    "### Define metadata for each pagename\n",
+    "Because of the big number of categories the first column is not dropped.\n",
     "\n",
-    "This metadata is mainly used for visualizations or pretty printing."
+    "The newly created columns get a readable name without space and all lowercase. This is the helper function used:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "0fb78f77-e299-4613-846a-b53048f2c1ef",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "page_info = {\n",
-    " 'Error':                     {'id':  5, 'color': 'red'},\n",
-    "\n",
-    " 'Home':                      {'id': 10, 'color': 'gray'},\n",
-    " 'Help':                      {'id': 11, 'color': 'gray'},\n",
-    " 'About':                     {'id': 12, 'color': 'gray'},\n",
-    "\n",
-    " 'Login':                     {'id': 14, 'color': 'gray'},\n",
-    " 'Logout':                    {'id': 15, 'color': 'gray'},\n",
-    "    \n",
-    " 'Settings':                  {'id': 17, 'color': 'gray'},\n",
-    " 'Save Settings':             {'id': 18, 'color': 'gray'},\n",
-    " 'Add Friend':                {'id': 19, 'color': 'gray'},\n",
-    "\n",
-    " 'Thumbs Down':               {'id': 22, 'color': 'gray'},\n",
-    " 'Thumbs Up':                 {'id': 23, 'color': 'gray'},\n",
-    " 'Add to Playlist':           {'id': 24, 'color': 'gray'},\n",
-    " 'NextSong':                  {'id': 25, 'color': 'gray'},\n",
-    "\n",
-    " 'Roll Advert':               {'id': 27, 'color': 'gray'},\n",
-    "\n",
-    " 'Register':                  {'id': 30, 'color': 'yellow'},\n",
-    " 'Upgrade':                   {'id': 31, 'color': 'yellow'},\n",
-    "\n",
-    " 'Submit Registration':       {'id': 34, 'color': 'green'},\n",
-    " 'Submit Upgrade':            {'id': 35, 'color': 'green'},\n",
-    "\n",
-    " 'Downgrade':                 {'id': 38, 'color': 'orange'},\n",
-    " 'Cancel':                    {'id': 39, 'color': 'orange'},\n",
-    "\n",
-    " 'Submit Downgrade':          {'id': 42, 'color': 'red'},\n",
-    "    \n",
-    " 'Cancellation Confirmation': {'id': 44, 'color': 'red'},\n",
-    "\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "04f59edc-4e54-409c-8fe6-d7de3c403f9f",
-   "metadata": {},
-   "source": [
-    "Add a normalized name to `page_info` without space and all lowercase, which can be used for the dummy column names."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 85,
    "id": "8f7b48a6-fa6e-43b6-b3fa-9ce2c4367486",
    "metadata": {
     "tags": []
@@ -905,11 +843,7 @@
     "    Input: name which can contain spaces with upper and lowercase letters.\n",
     "    Output: all spaces replaced with an underscore and all letters converted to lowercase\n",
     "    \"\"\"\n",
-    "    return name.replace(' ', '_').lower()\n",
-    "\n",
-    "## add \"colname\" to dictionary page_info\n",
-    "for k in page_info.keys():\n",
-    "    page_info[k][\"colname\"] = \"pg_\"+norm_colname(k)"
+    "    return name.replace(' ', '_').lower()"
    ]
   },
   {
@@ -927,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 86,
    "id": "58aeb7a8-e1d6-443b-98c7-e8aa60ca7720",
    "metadata": {
     "tags": []
@@ -958,7 +892,7 @@
    ],
    "source": [
     "page_features = df.groupBy(\"id\").pivot(\"page\").agg(F.lit(1)).na.fill(0)\n",
-    "page_features = page_features.toDF(*((page_info[col][\"colname\"]) if col!=\"id\" else \"id\" for col in page_features.columns))\n",
+    "page_features = page_features.toDF(*((\"pg_\"+norm_colname(col)) if col!=\"id\" else \"id\" for col in page_features.columns))\n",
     "page_features.show(10)"
    ]
   },
@@ -974,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 87,
    "id": "6776f38e-7e43-45a8-b920-b39a5ecfebf0",
    "metadata": {
     "tags": []
@@ -1027,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 88,
    "id": "8d217010-3f6c-4a2b-b4bd-c904c991ffbe",
    "metadata": {
     "tags": []
@@ -1052,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 89,
    "id": "24dcd57b-df3b-4600-8e3f-7c6c08ae572c",
    "metadata": {
     "tags": []
@@ -1078,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 90,
    "id": "b6fc64e9-c2e2-45bf-abfa-d60f1e885d53",
    "metadata": {
     "tags": []
@@ -1105,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 91,
    "id": "290353de-1334-493a-9c32-4033cb9b852e",
    "metadata": {
     "tags": []
@@ -1140,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 92,
    "id": "95bc61d1-48a0-4f1c-85f7-b0e245ec32ef",
    "metadata": {
     "tags": []
@@ -1165,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 93,
    "id": "c6730af7-983e-4fdb-89e3-acf38c176b22",
    "metadata": {
     "tags": []
@@ -1192,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 94,
    "id": "85692a52-ffbb-4fc2-aaff-978abed88cbe",
    "metadata": {
     "tags": []
@@ -1218,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 95,
    "id": "6d32bf74-bb8b-47b8-9eb6-b8ac5b58fabd",
    "metadata": {
     "tags": []
@@ -1294,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 96,
    "id": "75430f96-e423-495d-92aa-f47c0492ef6d",
    "metadata": {
     "tags": []
@@ -1334,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 98,
    "id": "e982b2e2-419d-4a19-bf53-0a97284d538c",
    "metadata": {
     "tags": []
@@ -1344,20 +1278,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+------+-------------+-------------+\n",
-      "|userId|      min(ts)|count(userId)|\n",
-      "+------+-------------+-------------+\n",
-      "|    66|1538682135000|           15|\n",
-      "|200021|1538717365000|           10|\n",
-      "|100013|1538841588000|           73|\n",
-      "|300023|1538984097000|          270|\n",
-      "+------+-------------+-------------+\n",
+      "+------+-------------+---------+\n",
+      "|userId|      min(ts)|count(ts)|\n",
+      "+------+-------------+---------+\n",
+      "|    66|1538682135000|       15|\n",
+      "|200021|1538717365000|       10|\n",
+      "|100013|1538841588000|       73|\n",
+      "|300023|1538984097000|      270|\n",
+      "+------+-------------+---------+\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "df.where(df.sessionId==65).groupBy(\"userId\").agg(F.min(F.col(\"ts\")), F.count(F.col(\"userId\"))).show()"
+    "df.where(df.sessionId==65).groupBy(\"userId\").agg(F.min(F.col(\"ts\")), F.count(F.col(\"ts\"))).show()"
    ]
   },
   {
@@ -1374,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 99,
    "id": "ec6fade0-352e-4b8e-9c8b-41b418340921",
    "metadata": {
     "tags": []
@@ -1407,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 100,
    "id": "8ff8f1ec-f074-4341-b484-3ec1222c6b68",
    "metadata": {},
    "outputs": [],
@@ -1420,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 101,
    "id": "93d34509-d023-42b7-b108-6b3fd2ed04b9",
    "metadata": {
     "tags": []
@@ -1432,7 +1366,7 @@
        "3176"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1461,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 102,
    "id": "08d968b1-d8fa-480b-bfd9-c796922e6153",
    "metadata": {
     "tags": []
@@ -1486,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 103,
    "id": "2534cc74-0775-4bef-907c-c80aba64f74d",
    "metadata": {
     "tags": []
@@ -1508,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 104,
    "id": "8bdb3b17-6ff4-424e-a541-30846825e12b",
    "metadata": {
     "tags": []
@@ -1571,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 105,
    "id": "94496b1d-1150-4774-907b-f07fa9a4e233",
    "metadata": {
     "tags": []
@@ -1591,12 +1525,12 @@
    "source": [
     "## Save to S3\n",
     "\n",
-    "Following the ETL process, the extracted data is now written into a new file, which can be loaded for the next processing step"
+    "Following the ETL process, the extracted data is now written into a new file, which can be loaded in the next processing step"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 108,
    "id": "9e07edaa-a35d-4f09-8534-39d1c89dd209",
    "metadata": {
     "tags": []
@@ -1606,18 +1540,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "### SAVING CLEANED DATA s3a://udacity-dsnd/sparkify/output/02-cleaned-mini_sparkify_event_data.json\n"
+      "### SAVING CLEANED DATA s3a://udacity-dsnd/sparkify/output/02-cleaned-mini_sparkify_event_data.json\n",
+      "finished\n"
      ]
     }
    ],
    "source": [
     "print(f\"### SAVING CLEANED DATA {CLEAN_DATA_URL}\")\n",
-    "df.write.format('json').mode('overwrite').save(CLEAN_DATA_URL)"
+    "df.write.format('json').mode('overwrite').save(CLEAN_DATA_URL)\n",
+    "print(f\"finished\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 109,
    "id": "558c372d-1625-4571-a51d-593eee3578d8",
    "metadata": {
     "tags": []
