finished 04_training_models.

--- a/01-setup-spark-session.ipynb
+++ b/01-setup-spark-session.ipynb
@@ -7,13 +7,13 @@
     "tags": []
    },
    "source": [
-    "# Setup Spark session\n",
+    "# \\[01\\] Setup Spark session\n",
     "\n",
     "## Variables\n",
     "\n",
     "Define important configuration variables here. \n",
-    "They are used later for setting up the Spark session.\n",
-    "Also define the URL to the data.\n"
+    "The URL for the dataset to be used (mini or big).\n",
+    "These vairables are used later for setting up the Spark session.\n"
    ]
   },
   {
@@ -25,15 +25,15 @@
    },
    "outputs": [],
    "source": [
+    "# S3 URL for accessing the data (switch here to change from big to mini data)\n",
+    "# EVENT_DATA_URL = \"s3a://udacity/sparkify/sparkify_event_data.json\"\n",
+    "EVENT_DATA_URL = \"s3a://udacity-dsnd/sparkify/mini_sparkify_event_data.json\"\n",
+    "\n",
     "# number of worker instances to be used in this session\n",
     "EXECUTOR_INSTANCES = 2\n",
     "\n",
     "# memory per worker\n",
-    "EXECUTOR_MEM = '6g'\n",
-    "\n",
-    "# S3 URL for accessing the data (switch here to change from big to mini data)\n",
-    "# EVENT_DATA_URL = \"s3a://udacity/sparkify/sparkify_event_data.json\"\n",
-    "EVENT_DATA_URL = \"s3a://udacity-dsnd/sparkify/mini_sparkify_event_data.json\""
+    "EXECUTOR_MEM = '6g'"
    ]
   },
   {
