--- a/02-data-introspection.ipynb
+++ b/02-data-introspection.ipynb
@@ -1560,7 +1560,8 @@
    },
    "outputs": [],
    "source": [
-    "spark.stop()"
+    "print(\"### STOP SPARK SESSION\")\n",
+    "spark.stop()  "
    ]
   },
   {
