--- a/05-training-models.ipynb
+++ b/05-training-models.ipynb
@@ -414,7 +414,7 @@
     "FUTURE_LOOKAHEAD_WEEKS = 2\n",
     "# weeks to look into the past from the predict-timestamp for new history\n",
     "PAST_NEAR_HISTORY_WEEKS = 1\n",
-    "# weeks to look into the past from the predict-timestamp for old history\n",
+    "# weeks before the near-history to look into the past for old-history \n",
     "PAST_OLD_HISTORY_WEEKS = 3\n",
     "\n",
     "current_week = 2\n",
@@ -453,7 +453,7 @@
    },
    "outputs": [],
    "source": [
-    "df_user = df_userweek.where(F.col(\"wid\") == newhistory_week_min).select(\"userId\", \"paid\", \"usermale\", \"userregistration\")"
+    "df_user = df_userweek.where(F.col(\"wid\") == newhistory_week_min).select(\"userId\", \"wid\", \"paid\", \"usermale\", \"userregistration\")"
    ]
   },
   {
@@ -594,11 +594,11 @@
    "source": [
     "def prefix_columns(df_orig, prefix, do_not_change_cols):\n",
     "    \"\"\"\n",
-    "    Input:  df_orig - Original DataFrame\n",
+    "    Input:  df_orig - original DataFrame\n",
     "            prefix - string to be added to all column names\n",
-    "            do_not_change_cols - liste of columns which should not be changed\n",
-    "    Output: new DataFrame, where all columns were renamed (prefix was added to the name at the beginning)\n",
-    "            except for the columns in \"do_not_change_cols\", those are unchanged.\n",
+    "            do_not_change_cols - columns which should be excluded from beeing prefixed\n",
+    "    Output: new DataFrame with renamed columns. All columns now start with the given prefix,\n",
+    "            with the exception of the columns named in do_not_change_cols\n",
     "    \"\"\"\n",
     "    newcols = [prefix+col if not col in do_not_change_cols else col for col in df_orig.columns]\n",
     "    return df_orig.toDF(*newcols)"
@@ -785,7 +785,7 @@
    "outputs": [],
    "source": [
     "assembler = VectorAssembler(inputCols=featureCols, outputCol=\"features\")\n",
-    "df_testtrain_vec=assembler.transform(df_user).select(\"userId\", \"label\",\"features\")"
+    "df_testtrain_vec=assembler.transform(df_user).select(\"userId\", \"wid\", \"label\",\"features\")"
    ]
   },
   {
@@ -837,7 +837,8 @@
     "    \"\"\"\n",
     "    Input:  Training DataFrame with a column \"label\" containing a binary classification (1 or 0)\n",
     "    Output: Newly created DataFrame, which contains an additional \"weight\" column, which compensates \n",
-    "            the different frequency of both partitions.  \n",
+    "            the different frequency of both partitions. The sum of weights for label \"1\" is equal to the \n",
+    "            sum of weights for the label \"0\". \n",
     "    \"\"\"\n",
     "    label_counts = df_train.agg(F.sum(F.col(\"label\")).alias(\"l1\"), F.sum(1-F.col(\"label\")).alias(\"l0\")).collect()[0]\n",
     "    l0 = label_counts.l0\n",
